// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Component Tests should handle style props 1`] = `
<Text
  allowFontScaling={false}
  selectable={false}
  style={
    {
      "color": "red",
      "fontSize": 16,
      "fontWeight": "bold",
    }
  }
>
  Styled Text
</Text>
`;

exports[`Text Component Tests should render nested text 1`] = `
<Text
  allowFontScaling={false}
  selectable={false}
  style={{}}
>
  Parent text
  <Text
    allowFontScaling={false}
    selectable={false}
    style={{}}
  >
    Child text
  </Text>
</Text>
`;

exports[`Text Component Tests should render text content 1`] = `
<Text
  allowFontScaling={false}
  selectable={false}
  style={{}}
>
  Hello World
</Text>
`;
